fix lower mask spacing

--- a/src/app.scss
+++ b/src/app.scss
@@ -22,7 +22,7 @@ html {
 
   --chatContentPaddingTop: 20px;
   --chatContentPaddingRight: 40px;
-  --chatContentPaddingBottom: 160px;
+  --chatContentPaddingBottom: 130px;
   --chatContentPaddingLeft: 40px;
   
   --chatInputPaddingTop: 0px;
@@ -343,7 +343,7 @@ aside.menu.main-menu .menu-expanse {
   color: hsl(0, 0%, 21%) !important;
 }
 
-.lower-mask {
+.lower-mask, .lower-mask2 {
   display: block;
   position: fixed;
   bottom: 0px;
@@ -357,7 +357,7 @@ aside.menu.main-menu .menu-expanse {
   .default-text {
     color: rgb(181, 181, 181) !important;
   }
-  .lower-mask {
+  .lower-mask, .lower-mask2 {
     background-image: linear-gradient(180deg,hsla(0,0%,100%,0) 13.94%, var(--BgColorDark) 54.73%);
   }
   aside.menu.main-menu .menu-expanse {
